src/test/incremental/const-generics/hash-tyvid-regression-3.stderr
error[E0599]: no method named `some_function` found for struct `SmallVec` in the current scope
  --> $DIR/hash-tyvid-regression-3.rs:17:19
   |
LL |         node.keys.some_function();
   |                   ^^^^^^^^^^^^^ method not found in `SmallVec<{ D * 2 }>`
...
LL | struct SmallVec<const D: usize> {}
   | ------------------------------- method `some_function` not found for this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
